--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ I'm currently redoing my website. in the meantime you can check out my  <a href=
         <a href="mailto:abc@example.com">Email</a>
         <a href="https://wiebkegrieshop.com/">Website</a>
         <a href="https://wiebkegrieshop.com/portfolio.pdf">Portfolio</a>
-        <a href="https://github.com/neuefische">Are.na</a>
-        <a href="https://github.com/neuefische">GitHub</a>
-        <a href="https://github.com/neuefische">Instagram</a>
+        <a href="https://github.com/wiebkwhat">Are.na</a>
+        <a href="https://github.com/wiebkwhat">GitHub</a>
+        <a href="https://github.com/wiebkwhat">Instagram</a>
       </section>
 
 
